compilateurDeca/src/test/deca/syntax/valid/sans_objet/parenthesized_expression.deca


// Description:
//
// Teste expression fortement parenthesee
// Historique:09/01/2026
{
    int x;
    x = (((1 + 2)));
}
