compilateurDeca/src/test/deca/syntax/invalid/sans_objet/nested_blocks.deca


//Description
//
// teste blocs imbriques
// Historique:
//    cree le 08/01/2026
{
    {
        {
            int x;
            x = 1;
        }
    }
}